// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render as thumbnail 1`] = `
<div class="Board _thumb">
  <!---->
  <div class="cells u-grid-2-x"></div>
</div>
`;

exports[`render empty 1`] = `
<div class="Board">
  <!---->
  <div class="cells"></div>
</div>
`;

exports[`render in edit mode 1`] = `
<div class="Board">
  <boardtoolbar-stub board="[object Object]" name="slideDown"></boardtoolbar-stub>
  <div class="cells u-grid-2-x">
    <cell-stub title="" content=""></cell-stub>
    <cell-stub title="" content=""></cell-stub>
  </div>
</div>
`;

exports[`render normal 1`] = `
<div class="Board">
  <!---->
  <div class="cells u-grid-2-x">
    <cell-stub title="" content=""></cell-stub>
    <cell-stub title="" content=""></cell-stub>
  </div>
</div>
`;
